examples/test/testpolicy14913.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14913
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key44: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value40
      podSelector:
        matchLabels:
          key36: value10
          key10: value15
          key33: value29
